JO-2008-08-26-0: RFE:         database version upgrade needs to be enhanced
                 Bugster:     6647720
                 Issue:       2453
                 Bugfix:      reporting installation fails with SJWC 3.0.x if $JAVA_HOME is not set to java version at least 1.5
                 Bugster:     6740388
                 Issue:       2696
                 Bugfix:      dbwriter installation doesn't exit when an SQL error happens during database install/upgrade
                 Bugster:     6740404
                 Issue:       2697
                 Bugfix:      Upgrading dbwriter from 6.1u4, 6.1u5 to 6.2 fails on MySQL
                 Bugster:     6740420
                 Issue:       2698
                 Review:      AP

AP-2008-08-14-0: Bugfix:      Instalation script for reporting "assumes" correct
                              permission settings for instalation files
                 Bugster:     6734854
                 Issue:       2690
                 Review:      LP

JO-2008-08-07-0: Enhancem.:   Updated files in www directory for sunsource.net
                 Review:      AP

JO-2008-08-05-0: RFE:         ARCo should support SJWC 3.1
                 Bugster:     6733626
                 Issue:       2683
                 Review:      AP

MD-2008-07-31-0: CVS:       Created V62_TAG
-------------------------------------------

JO-2008-07-28-0: Enhancem.:   Updated files in www directory for sunsource.net
                 Review:      AP

JO-2008-07-24-0: Bugfix:      Exception occurs during the exportation of a query result to pdf
                 Bugster:     6729353
                 Issue:       2676
                 Review:      AP

LP-2008-07-22-0: Cleanup:     Removed sunsource.net link from SMF service template
                 Bugfix:      tr command has wrong replace arguments in some 
                              places
                 Bugfix:      Installation fails when another cluster already uses