@@ -68,6 +68,11 @@ You can export the data in CVS or PDF form, or store the result for later viewin
 You also have the ability to run ARCo queries in a batch mode using the arcorun utility. 
 </p>
 
+A description how to build ARCo from source can be found <a href="arco_build.html">
+<b>here</b></a> and additional hints concerning setup and installation issues can be found in 
+the following <a href="arco_faq.html"><b>FAQ</b></a>. <br>
+
+
 <h4>The official documentation for Sun Grid Engine 6.2 can be found:</h4>
 <a href="http://wikis.sun.com/display/GridEngine/Accounting+and+Reporting+Console+(ARCo)">
 Accounting and Reporting Console (ARCo)   
@@ -111,10 +116,6 @@ Installation Guide</a><br>
 
 <a href="http://docs.sun.com/app/docs/doc/817-6117/fryiy?a=view">Appendix A 
 Database Schemas in N1 Grid Engine 6 User's Guide</a><br>
-
-<br>
-A description how to build ARCo from source can be found <a href="arco_build.html">
-<b>here</b></a> and additional hints concerning setup can be found in the following <a href="arco_faq.html"><b>FAQ</b></a>. <br>
 
 <br>
 <br>
