@@ -1,3 +1,6 @@
+JO-2008-08-27-0: Enhancem.:   Updated files in www directory for sunsource.net
+                 Review:      AP
+
 JO-2008-08-26-0: RFE:         database version upgrade needs to be enhanced
                  Bugster:     6647720
                  Issue:       2453
